# Map_Switch

./: README.md  map_server_json.py
deliverybot_control/: CMakeLists.txt
deliverybot_control/scripts/: deliverybot_hw_controller.py
deliverybot_description/: CMakeLists.txt
deliverybot_description/rviz/: rviz.rviz
deliverybot_mapping/: CMakeLists.txt  package.xml
deliverybot_mapping/include/: 3D_map_loader.h
deliverybot_mapping/launch/: 3D_map_loader.launch
deliverybot_mapping/maps/itri_maps/PCD_files/ZhiLing_map/20220715_B14_Outdoor/: mymap.yaml
deliverybot_mapping/maps/itri_maps/PCD_files/ZhiLing_map/drive-download-20220714T044205Z-001/: result.yaml
deliverybot_mapping/maps/itri_maps/pgm_yaml/: itri_B14_indoor_2D.pgm  itri_B14_indoor_2D.yaml
deliverybot_mapping/maps/itri_maps/planner_parameters/: 20220331_fulltest.yaml
deliverybot_mapping/maps/others/: turtlebot_map.pgm
deliverybot_mapping/nodes/: 3D_map_loader.cpp
deliverybot_navigation/: CMakeLists.txt
deliverybot_navigation/scripts/: send_goal.py
deliverybot_simulations/: CMakeLists.txt
deliverybot_simulations/launch/: amcl.launch  building_world.launch  empty_world.launch
deliverybot_simulations/scripts/: initialpose.txt
deliverybot_simulations/worlds/: building_people_world.world
multimap_server/: CMakeLists.txt
multimap_server/scripts/: initialpose_marker.py  itri_map_server.py  itri_map_server_class.py  itri_map_server_py2.py  itri_map_server_py3.py  location_marker.py  map_server_json.py  multimap_server_node.py  switcher_env.json  test.py  test_json.py
multimap_server/srv/: MapFilePath.srv
